--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
         <div class="todo">
             <h2>To-Do List <img src="icon.png" alt="img"></h2>
             <div class="butt">
-                <input onclick="addTask()" type="text" id="textname" placeholder="Add your Tasks">
+                <input  type="text" id="textname" placeholder="Add your Tasks">
                 <button onclick="addTask()"> ADD </button>
             </div>
             <ul id="list">
